Fixing: Text in preferences menu not aligned #189

--- a/app/sass/responsive/_mq_shared.scss
+++ b/app/sass/responsive/_mq_shared.scss
@@ -41,7 +41,11 @@ body {
         li{
             a{
                 padding: 0 $spacing;
+                span{
+                    left:50px;
+                }
             }
+
 
         }
     }
